feat: Add admin panel for managing products, categories, generics, and manufacturers
- Implemented product management page with metadata generation.
- Created queries for fetching product lists and individual product details.
- Developed admin app bar with user authentication and theme switch.
- Added drawer component for navigation in the admin panel.
- Introduced services for CRUD operations on categories, generics, manufacturers, and products.
- Defined types for categories, generics, manufacturers, and products.
- Updated role definitions to include new roles.
- Added localization support for admin panel actions and alerts.
- Enhanced common navigation with links to new admin panel sections.

--- a/src/services/i18n/locales/en/admin-panel-roles.json
+++ b/src/services/i18n/locales/en/admin-panel-roles.json
@@ -1,6 +1,9 @@
 {
   "role": {
     "1": "Admin",
-    "2": "User"
+    "2": "Pharmacist",
+    "3": "Cashier",
+    "4": "Manager",
+    "5": "User"
   }
 }
