feat: Enhance admin panel for manufacturers, products, and categories
- Added new fields for manufacturers including name, license, address, origin, and short description.
- Updated product creation and editing forms to include fields for name, description, stock, expiry date, manufacture date, manufacturer, generics, and categories.
- Enhanced categories and generics management with additional fields and validation.
- Improved table views in the admin panel to display new fields for manufacturers and products.
- Added internationalization support for new fields and validation messages.
- Refactored components for better code organization and reusability.

--- a/src/services/i18n/locales/en/admin-panel-categories-create.json
+++ b/src/services/i18n/locales/en/admin-panel-categories-create.json
@@ -2,6 +2,18 @@
   "title": "Create category",
   "actions": { "submit": "Save", "cancel": "Cancel" },
   "inputs": {
+    "name": {
+      "label": "Name",
+      "validation": {
+        "required": "Name is required"
+      }
+    },
+    "code": {
+      "label": "Code",
+      "validation": {
+        "required": "Code is required"
+      }
+    },
     "<system>": "Do not remove this property"
   },
   "alerts": {
