--- a/src/services/i18n/locales/en/admin-panel-categories-edit.json
+++ b/src/services/i18n/locales/en/admin-panel-categories-edit.json
@@ -2,6 +2,18 @@
   "title": "Edit category",
   "actions": { "submit": "Save", "cancel": "Cancel" },
   "inputs": {
+    "name": {
+      "label": "Name",
+      "validation": {
+        "required": "Name is required"
+      }
+    },
+    "code": {
+      "label": "Code",
+      "validation": {
+        "required": "Code is required"
+      }
+    },
     "<system>": "Do not remove this property"
   },
   "alerts": { "success": "Category has been updated successfully" }
