--- a/src/services/i18n/locales/en/admin-panel-categories.json
+++ b/src/services/i18n/locales/en/admin-panel-categories.json
@@ -2,6 +2,8 @@
   "title": "Categories",
   "table": {
     "column1": "ID",
+    "name": "Name",
+    "code": "Code",
     "<system>": "Do not remove this property"
   },
   "actions": {
