--- a/src/services/i18n/locales/en/admin-panel-generics.json
+++ b/src/services/i18n/locales/en/admin-panel-generics.json
@@ -2,6 +2,8 @@
   "title": "Generics",
   "table": {
     "column1": "ID",
+    "name": "Name",
+    "strength": "Strength",
     "<system>": "Do not remove this property"
   },
   "actions": {
