feat: Implement customer and supplier management features
- Added customer queries and services for fetching, creating, and editing customers.
- Developed customer creation and editing forms with validation using react-hook-form and yup.
- Implemented supplier queries and services for fetching, creating, and editing suppliers.
- Created supplier management pages with forms for adding and editing suppliers.
- Enhanced UI with Material-UI components and integrated translation support.
- Added necessary localization files for customer and supplier management.
- Implemented infinite scrolling for supplier list with delete confirmation dialog.

--- a/src/services/i18n/locales/en/common.json
+++ b/src/services/i18n/locales/en/common.json
@@ -2,6 +2,8 @@
   "app-name": "APP",
   "loading": "Loading ...",
   "navigation": {
+    "Customers": "Customers",
+    "Suppliers": "Suppliers",
     "Products": "Products",
     "Generics": "Generics",
     "Categories": "Categories",
@@ -11,7 +13,8 @@
     "signUp": "Sign Up",
     "profile": "Profile",
     "users": "Users",
-    "logout": "Logout"
+    "logout": "Logout",
+    "dashboard": "Dashboard"
   },
   "formInputs": {
     "avatarInput": {
